syntax = "proto3";
package workflow;

import "google/protobuf/timestamp.proto";

service WorkflowSvc {
    rpc CreateWorkflow(CreateRequest) returns (CreateResponse);
    rpc GetWorkflow(GetRequest) returns (Workflow);
    rpc DeleteWorkflow(GetRequest) returns (Empty);
    rpc ListWorkflows(Empty) returns (stream Workflow);
}

message Empty {
}

message Workflow {
    string id = 1;
    string template = 2;
    string target = 3;
    State state = 4;
    google.protobuf.Timestamp createdAt = 5;
    google.protobuf.Timestamp updatedAt = 6;
    google.protobuf.Timestamp deletedAt = 7;  
    string data = 8; 
}

enum State {
    PENDING = 0;
    RUNNING = 1; 
    FAILED = 2;
    TIMEOUT = 3;
    SUCCESS = 4;
} 

message CreateRequest {
    string template = 1;
    string target = 2;
}

message CreateResponse {
	string id = 1;
}

message GetRequest {
    string id = 1;
}
